# victron-helios

./: .gitignore  README.md  TODO.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
helios/: __init__.py  __main__.py  api.py  config.py  controller.py  dbus_client.py  dwell.py  executor.py  metrics.py  models.py  planner.py  providers.py  scheduler.py  server.py  state.py  telemetry.py
helios/integrations/: consumption.py  pricing.py  solar.py
helios/web/: app.js  index.html  styles.css
tests/: test_api_ranges.py  test_api_wiring.py  test_dwell.py  test_executor.py  test_planner.py  test_planner_horizon.py  test_providers.py  test_settings_validation.py  test_tibber_provider.py
