[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_sort_within_sections = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "C90"]
ignore = ["UP007"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-gx"
version = "0.1.0"
description = "Helios: Advanced Dynamic Energy Management for Victron GX"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["."]
include = ["helios*"]
